force-app/main/default/objects/AgentGov_Budget__c/AgentGov_Budget__c.object-meta.xml
<CustomObject>
    <description>Allocates and tracks daily governor limit budgets per agent.</description>
    <label>Governor Budget</label>
    <nameField>
        <displayFormat>BDG-{0000}</displayFormat>
        <label>Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Governor Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>