force-app/main/default/objects/AgentGov_Budget__c/fields/Agent_Registration__c.field-meta.xml
<CustomField>
    <fullName>Agent_Registration__c</fullName>
    <label>Agent Registration</label>
    <type>MasterDetail</type>
    <description>The agent registration this budget is allocated to</description>
    <referenceTo>AgentGov_Registration__c</referenceTo>
    <relationshipLabel>Governor Budgets</relationshipLabel>
    <relationshipName>Governor_Budgets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>