force-app/main/default/objects/AgentGov_Budget__c/fields/API_Calls_Allocated__c.field-meta.xml
<CustomField>
    <fullName>API_Calls_Allocated__c</fullName>
    <label>API Calls Allocated</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>10000</defaultValue>
    <description>Total API calls allocated for this budget period</description>
</CustomField>