force-app/main/default/objects/AgentGov_Budget__c/fields/API_Calls_Consumed__c.field-meta.xml
<CustomField>
    <fullName>API_Calls_Consumed__c</fullName>
    <label>API Calls Consumed</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total API calls consumed in this budget period</description>
</CustomField>