force-app/main/default/objects/AgentGov_Budget__c/fields/Budget_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Date__c</fullName>
    <label>Budget Date</label>
    <type>Date</type>
    <required>true</required>
    <description>The date this budget allocation applies to</description>
</CustomField>