force-app/main/default/objects/AgentGov_Budget__c/fields/Budget_Key__c.field-meta.xml
<CustomField>
    <fullName>Budget_Key__c</fullName>
    <label>Budget Key</label>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
    <description>Registration Id and budget date combined. The uniqueness constraint guarantees one budget row per agent per day even when two transactions create the day's budget at the same moment. Populated automatically by AgentGovBudgetTrigger.</description>
</CustomField>