force-app/main/default/objects/AgentGov_Budget__c/fields/Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Budget_Status__c</fullName>
    <label>Budget Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Throttled</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Exhausted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>