force-app/main/default/objects/AgentGov_Budget__c/fields/DML_Operations_Allocated__c.field-meta.xml
<CustomField>
    <fullName>DML_Operations_Allocated__c</fullName>
    <label>DML Operations Allocated</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>3000</defaultValue>
    <description>Total DML operations allocated for this budget period</description>
</CustomField>