force-app/main/default/objects/AgentGov_Budget__c/fields/DML_Operations_Consumed__c.field-meta.xml
<CustomField>
    <fullName>DML_Operations_Consumed__c</fullName>
    <label>DML Operations Consumed</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total DML operations consumed in this budget period</description>
</CustomField>