force-app/main/default/objects/AgentGov_Budget__c/fields/SOQL_Queries_Allocated__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Allocated__c</fullName>
    <label>SOQL Queries Allocated</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>5000</defaultValue>
    <description>Total SOQL queries allocated for this budget period</description>
</CustomField>