force-app/main/default/objects/AgentGov_Budget__c/fields/SOQL_Queries_Consumed__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Consumed__c</fullName>
    <label>SOQL Queries Consumed</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total SOQL queries consumed in this budget period</description>
</CustomField>